syntax = "proto3";
import "CipherPayload.proto";

package ecliptix.proto.verification;
option csharp_namespace = "Ecliptix.Core.Protobuf.VerificationServices";

service AuthenticationServices {
  rpc InitiateVerification(CipherPayload) returns (stream CipherPayload);
  rpc VerifyCode(CipherPayload) returns (CipherPayload);
  rpc ValidatePhoneNumber(CipherPayload) returns (CipherPayload);
  rpc InitiateResendVerification(CipherPayload) returns (CipherPayload);
}
